# csv-excel-transposer

./: README.md  csv_excel_converter_single.py  prog.py  pyproject.toml  rambovaditya Avro Enteprise.txt
csv_excel_converter/: __init__.py  cli.py  converter.py  exceptions.py
tests/: test_roundtrip.py
