[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-excel-converter"
version = "0.1.0"
description = "CLI for converting between CSV and Excel formats with optional transpose."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://example.com/csv-excel-converter"

[project.scripts]
csv-excel-converter = "csv_excel_converter.cli:main"

[optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["csv_excel_converter"]
